--- a/hyperparameter_tuning.ipynb
+++ b/hyperparameter_tuning.ipynb
@@ -238,56 +238,10 @@
    "source": [
     "## Best Combination\n",
     "\n",
-    "Finding the best parameter combination."
+    "Finding the best parameter combination.\n",
+    "\n",
+    "*Not an easy way to do this with differening scales of loss.*"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "eec751d4-10b5-4b57-a144-336117dd75c6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "81be3094-ff58-4c03-8167-dc16ead8fc16",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d38c96d4-b018-4967-b56b-0f41562c413f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2d64af13-7980-4d94-9549-18fa33c62745",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "961426ee-1f13-40a8-b24f-dc383f326c7e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "558a2c9d-f169-4fd8-a3d1-5a1106db1c43",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
