--- a/JScripts/actor_critic-experimental.ipynb
+++ b/JScripts/actor_critic-experimental.ipynb
@@ -23,22 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "d76f3610-9500-481c-b73d-f103d53bb9e1",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_geometric/typing.py:68: UserWarning: An issue occurred while importing 'pyg-lib'. Disabling its usage. Stacktrace: /data/users/jupyter-dam724/.local/lib/python3.9/site-packages/libpyg.so: undefined symbol: _ZN3c1010Dispatcher17runRecordFunctionERN2at14RecordFunctionESt17reference_wrapperIKNS_14FunctionSchemaEENS_11DispatchKeyE\n",
-      "  warnings.warn(f\"An issue occurred while importing 'pyg-lib'. \"\n",
-      "/data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_geometric/typing.py:97: UserWarning: An issue occurred while importing 'torch-cluster'. Disabling its usage. Stacktrace: /data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_cluster/_version_cuda.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKSs\n",
-      "  warnings.warn(f\"An issue occurred while importing 'torch-cluster'. \"\n",
-      "/data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_geometric/typing.py:113: UserWarning: An issue occurred while importing 'torch-spline-conv'. Disabling its usage. Stacktrace: /data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_spline_conv/_version_cuda.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKSs\n",
-      "  warnings.warn(\n",
-      "/data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_geometric/typing.py:124: UserWarning: An issue occurred while importing 'torch-sparse'. Disabling its usage. Stacktrace: /data/users/jupyter-dam724/.local/lib/python3.9/site-packages/torch_sparse/_version_cuda.so: undefined symbol: _ZN5torch3jit17parseSchemaOrNameERKSs\n",
-      "  warnings.warn(f\"An issue occurred while importing 'torch-sparse'. \"\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'Data'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[7], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m critic_dataset, dataset, generator\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mData\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m utility \u001b[38;5;28;01mas\u001b[39;00m data_utility\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mModel\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m critics, actors, scipy, ac_training\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'Data'"
      ]
     }
    ],
@@ -100,6 +97,7 @@
     "    hidden = 128 # 128 for LU (it doubles the amount of layers) | 512 for NID it has larger output same layers | 256 else\n",
     "    sparse_tol = 1e-3\n",
     "    diagonal_bias = 0.1\n",
+    "    tanh = True\n",
     "    \n",
     "    l1 = 0\n",
     "    inv = 0\n",
@@ -225,10 +223,11 @@
     "    'hidden':Config.hidden,\n",
     "    'batch_size':Config.batch_size,\n",
     "    'sparse_tol':Config.sparse_tol,\n",
-    "    'diagonal_bias':Config.diagonal_bias\n",
+    "    'diagonal_bias':Config.diagonal_bias,\n",
+    "    'tanh': Config.tanh\n",
     "}\n",
     "\n",
-    "actor = actors.LuFCN(**actor_params).to(device)\n",
+    "actor = actors.CholeskyFCN(**actor_params).to(device)\n",
     "\n",
     "if Config.pretrained_actor is not None:\n",
     "     model_utility.load_model(actor, Config.pretrained_actor)"
